fixed the bug of overflow

--- a/week1/src/rwd.sass
+++ b/week1/src/rwd.sass
@@ -14,9 +14,6 @@
 // behavior of below 600
 @media screen and (max-width: 600px)
   body
-    overflow-x: hidden
-    #sidebar
-      display: block
     #nav
       .items
         overflow: hidden
