--- a/week1/src/style.sass
+++ b/week1/src/style.sass
@@ -151,6 +151,8 @@ html
 #sidebar
   &.in
     transform: translateX(0%)
+  &.appear
+    display: block
 #nav
   .container
     .hamberger
